ESB-890: code cleaning